--- a/README.mkd
+++ b/README.mkd
@@ -8,7 +8,7 @@ Go file containing equivalent definitions.
 ## Installation
 
 	$ git clone git://github.com/kless/goheader.git
-	$ cd goheader && ./INSTALL.sh && cd -
+	$ cd goheader && ./Install.sh && cd -
 
 
 ## Configuration
