Fix typo for license

--- a/README.mkd
+++ b/README.mkd
@@ -25,7 +25,7 @@ Nothing.
 ***Copyright 2010  The "goheader" Authors***  
 See file AUTHORS and CONTRIBUTORS (if any).
 
-Licensed under **Simplified BSD License**.  
+Licensed under **BSD-2 Clause license**.  
 See file LICENSE.
 
 
